# coinvolution

./: Cargo.toml  demo.py  gmap.py  notes.md
client/: build.sh  tsconfig.json
client/src/: coloring.js  gmap.ts  gmap_display.js  graph.html  graph.js  grid_display.js  puzzle.html  puzzle.js  ser.ts
coin-web/: Cargo.toml  build.sh  index.html
coin-web/js/: svg.js
coin-web/src/: lib.rs  puzzle.rs  request.rs  svg.rs  utils.rs
coin-web/www/: graph.js  index.js  svg.js
examples/: futoshikislither_example.py
folding/: Cargo.toml  notes.md
folding/resources/fold-examples/: README  diagonal-cp.fold  triangle.fold
folding/src/: convex.rs  format.rs  intersection.rs  lib.rs
gmap/: Cargo.toml
gmap/src/: format.rs  grid.rs  lib.rs
gmap/src/grids/: hex.rs  mod.rs  square.rs
graph-folding/: Cargo.toml
graph-folding-web/: Cargo.toml  index.html
graph-folding-web/src/: app.rs  lib.rs  svg.rs
graph-folding/src/: circular.rs  lib.rs
python/: app.py  flake.nix  gmap.py  pyproject.toml  readme  requirements.txt  server.py  simpleloop.py
python/examples/: frontback_example.py
python/solvers/: simpleloop.py  util.py
python/src/: app.py  dartlist.py  gmap.py  grid.py  puzzle.py  pyproject.toml  server.py
python/src/draw/: console.py
python/src/gmap/: __init__.py  dartlist.py  grid.py
python/src/main/: solve_pzp.py
python/src/main/test/: test_solve_pzp.py
python/src/pzp/: __init__.py
python/src/pzp/test/: __init__.py
python/src/solvers/: __init__.py  numberlink.py  simpleloop.py  util.py
python/src/static/: coin_web.js
python/src/templates/: index.html
python/src/test/: test_solve_pzp.py
python/static/: coin_web_bg.wasm  svg.js
python/templates/: index.html
src/: gmap.rs  lib.rs
