[package]
name = "folding"
version = "0.1.0"
authors = ["Lily Chung <lkdc@mit.edu>"]
edition = "2018"

[dependencies]
gmap = { path = "../gmap" }
na = { package = "nalgebra", version = "0.31"}
parry2d-f64 = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
