[package]
name = "graph-folding-web"
version = "0.1.0"
authors = ["Lily Chung <lkdc@mit.edu>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gmap = { path = "../gmap" }
graph-folding = { path = "../graph-folding" }
wasm-bindgen = { version = "0.2.63", features = ["nightly"] }
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
sauron = "0.49"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
