[project]
name = "coinvolution"
version = "0.0.1"
dependencies = [
  "jsonschema",
  "quart",
  "z3",
]

[project.scripts]
solve-pzp = "coinvolution.main.solve_pzp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [ "src/**/*.py", "src/templates" ]
sources = { "src" = "coinvolution" }
